1.0
===

- Added UpdateSchema to ARStarter

- Applied Alwin's patch adding IValidationProvider common interface for AR models that can be validated.

- Applied Rick Fleming's patch adding GetRegisteredTypes to ActiveRecordStarter.

- Added IsOverride to PrimaryKey attribute to allow a primary key in a derived
  class to override one in the base class.

- Applied Vladimir Okhotnikov's patch fixing TransactionScope Flush 

- Applied Alun Harford's patch fixing AR-182
  "ActiveRecordStarter.ModelsCreated run too late"

- Added IsOverride to Property attribute to allow a property in a derived
  class to override one in the base class.

- Added SqlQueryJoinDefinition, SqlQueryScalarDefinition and refactored to 
  put behavior in IQueryModifier.Apply.

- Added QueryResultTransformer modifier to allow setting a results transformer.

- Applied patch from Patrick Steele adding support for DiscriminatorLength in mappings. 

- Added support for validating nested properties. 

- Applied patch from Roger Chapman allowing ActiveRecord to be used signed in Medium trust.

- Applied patch from Steven Radack which catches invalid configuration of multiple database types. (They must be abstract). 
  Now AR throws an exception rather than silently using the same database.  

Release Candidate 2
===================

- Mark SessionScope.Dispose(true) overload as deprecated. FlushMode.Never is the new black. 

- Added support for property-ref to BelongsTo (many-to-one)

- Added support for CompositeUserType properties in nested classes

- Added ActiveRecordBase.Asc/Desc(params string[] propertyNames) methods to allow convenient specification of sort order.

- Applied Oleg Snurnikov's patch fixing AR-178
  "SessionScopeWebModule fails with HybridWebThreadScopeInfo"

- Applied Artur Grzegorzewicz's patch fixing AR-177
  "Parameterless overload of ActiveRecordStarter.Initialize"

- Added RegisterAssemblies to ActiveRecordStarter
